[package]
name = "pengine-rs"
version = "0.1.0"
authors = ["Kangjun Heo == P.Knowledge <knowledge@o.cnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
askama = "0.10.5"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls", "postgres" ] }
serde_json = "1.0"